--- a/public/demo.html
+++ b/public/demo.html
@@ -134,7 +134,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap beign</title>
+    <title>相册</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="zepto.min.js"></script>
 	<link href="animate.css" rel="stylesheet" type="text/css">
