--- a/public/demo.html
+++ b/public/demo.html
@@ -1,8 +1,7 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap beign</title>
+    <title>相册</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="zepto.min.js"></script>
 	<link href="animate.css" rel="stylesheet" type="text/css">
@@ -130,7 +129,6 @@
 	});
 	</script>
   </body>
-=======
 <!DOCTYPE html>
 <html>
   <head>
@@ -263,5 +261,4 @@
 	});
 	</script>
   </body>
->>>>>>> 14750e0b58b2503817d20d23302426f1d84a0e23
 </html>
