--- a/public/demo.html
+++ b/public/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>相册</title>
+    <title>Bootstrap beign</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="zepto.min.js"></script>
 	<link href="animate.css" rel="stylesheet" type="text/css">
@@ -76,7 +76,6 @@
 			
 			callback&&callback();
 		}
-		ImageObj.src = imgsrc;
 		
 	}
 	$('#container').delegate('li','tap',function(){
