--- a/public/centerHome.html
+++ b/public/centerHome.html
@@ -3,8 +3,26 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link href="frontcss.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+    <div class="nav">
+
+    </div>
+    <div class="heading_img">
+        <img src="centerImg.png">
+    </div>
+    <div class="tableView">
+        <ul class="list-menu">
+            <li><a href="demo.html"><b>分享那一刻</b></a></li>
+            <li><a href="#"><b>即时消息 <span></span> </b></a></li>
+            <li><a href="#"><b>呼叫魔镜</b></a></li>
+            <li><a href="#"><b>定时消息<span class="red"></span> </b></a></li>
+            <li><a href="#"><b>语音记事本</b></a></li>
+            <li><a href="#"><b>智能生活<span></span> </b></a></li>
+            <li><a href="#"><b>信息订阅</b></a></li>
+        </ul>
+    </div>
 
 </body>
 </html>
