--- a/public/centerHome.html
+++ b/public/centerHome.html
@@ -10,16 +10,16 @@
 
     </div>
     <div class="heading_img">
-        <img src="centerImg.png">
+        <img src="centerImg.png" width="100%" height="30%">
     </div>
     <div class="tableView">
         <ul class="list-menu">
             <li><a href="demo.html"><b>分享那一刻</b></a></li>
-            <li><a href="#"><b>即时消息 <span></span> </b></a></li>
+            <li><a href="#"><b>即时消息  </b></a></li>
             <li><a href="#"><b>呼叫魔镜</b></a></li>
-            <li><a href="#"><b>定时消息<span class="red"></span> </b></a></li>
+            <li><a href="#"><b>定时消息 </b></a></li>
             <li><a href="#"><b>语音记事本</b></a></li>
-            <li><a href="#"><b>智能生活<span></span> </b></a></li>
+            <li><a href="#"><b>智能生活 </b></a></li>
             <li><a href="#"><b>信息订阅</b></a></li>
         </ul>
     </div>
