--- a/public/centerHome.html
+++ b/public/centerHome.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="nav">
-
+        <div></div>
     </div>
     <div class="heading_img">
         <img src="centerImg.png" width="100%" height="30%">
