--- a/public/centerHome.html
+++ b/public/centerHome.html
@@ -88,19 +88,19 @@
 
 
 
-                <div class="swiper-container" id="slider-swiper">
+                <!--<div class="swiper-container" id="slider-swiper">-->
 
-                    <div class="swiper-wrapper">
+                    <!--<div class="swiper-wrapper">-->
 
-                        <div class="swiper-slide"> <img src="images/1.jpg" alt=""> </div>
+                        <!--<div class="swiper-slide"> <img src="images/1.jpg" alt=""> </div>-->
 
-                        <div class="swiper-slide"> <img src="images/2.jpg" alt=""> </div>
+                        <!--<div class="swiper-slide"> <img src="images/2.jpg" alt=""> </div>-->
 
-                        <div class="swiper-slide"> <img src="images/3.jpg" alt=""> </div>
+                        <!--<div class="swiper-slide"> <img src="images/3.jpg" alt=""> </div>-->
 
-                    </div>
+                    <!--</div>-->
 
-                </div>
+                <!--</div>-->
 
 
 
@@ -113,7 +113,7 @@
                 <div class="tableView">
                     <ul class="list-menu">
                         <li><a href="demo.html"><b>分享那一刻</b></a></li>
-                        <li><a href="#"><b>即时消息  </b></a></li>
+                        <li><a href="#"><b>即时消息</b></a></li>
                         <li><a href="#"><b>呼叫魔镜</b></a></li>
                         <li><a href="#"><b>定时消息 </b></a></li>
                         <li><a href="#"><b>语音记事本</b></a></li>
