--- a/public/centerHome.html
+++ b/public/centerHome.html
@@ -113,7 +113,7 @@
                 <div class="tableView">
                     <ul class="list-menu">
                         <li><a href="demo.html"><b>分享那一刻</b></a></li>
-                        <li><a href="#"><b>即时消息</b></a></li>
+                        <li><a href="PushInfo.html"><b>即时消息</b></a></li>
                         <li><a href="#"><b>呼叫魔镜</b></a></li>
                         <li><a href="#"><b>定时消息 </b></a></li>
                         <li><a href="#"><b>语音记事本</b></a></li>
