--- a/public/centerHome.html
+++ b/public/centerHome.html
@@ -4,90 +4,40 @@
     <meta charset="UTF-8">
     <title></title>
     <link href="frontcss.css" type="text/css" rel="stylesheet">
-
-
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
-
     <meta name="apple-mobile-web-app-capable" content="yes" />
-
-
-
-    <title>大气流畅国外手机网站模板-红色系风格 科蚁网免费发布 ke01.com</title>
-
-
-
+    <title></title>
     <link rel="stylesheet" href="css/normalize.css" type="text/css" media="screen">
-
     <link rel="stylesheet" href="css/main.css" type="text/css" media="screen">
-
-
-
     <!-- Color Scheme -->
-
     <link rel="stylesheet" href="css/color.css" type="text/css" media="screen">
-
-
 </head>
 <body>
-
 <div id="st-container" class="st-container">
-
     <nav class="st-menu st-effect-4">
-
         <ul>
-
             <li><h1>那刻 www.nokee.com</h1></li>
-            <li><a class="ico aboutus" href="aboutus.html">添加</a></li>
-
+            <li><a class="ico aboutus" href="AddFriend.html">添加</a></li>
             <li><a class="ico contact" href="contact.html">好友</a></li>
-
             <li><a class="ico home selected" href="index.html">个人设置</a></li>
-
             <li><a class="ico portfolio" href="portfolio.html">使用说明</a></li>
-
             <li><a class="ico services" href="services.html">常见问题</a></li>
-
             <li><a class="ico gallery" href="gallery.html">意见反馈</a></li>
-
             <li><a class="ico blog" href="blog.html">购买那刻魔镜</a></li>
-
             <li><a class="ico typography" href="typography.html">关于产品</a></li>
-
-
-
-
         </ul>
-
     </nav>
-
-
-
     <div class="st-pusher">
-
         <div class="st-content">
-
             <div class="st-content-inner">
-
                 <!-- Top Navigation -->
-
                 <header>
-
                     <div id="st-trigger-effects">
-
                         <button data-effect="st-effect-4" id="menu-bars"></button>
-
                     </div>
-
                     <h1>那刻</h1>
-
-
-
                 </header>
-
-
-
                 <!--<div class="swiper-container" id="slider-swiper">-->
 
                     <!--<div class="swiper-wrapper">-->
@@ -101,9 +51,6 @@
                     <!--</div>-->
 
                 <!--</div>-->
-
-
-
                 <div class="nav">
                     <div></div>
                 </div>
@@ -121,37 +68,16 @@
                         <li><a href="#"><b>信息订阅</b></a></li>
                     </ul>
                 </div>
-
             </div><!-- /st-content-inner -->
-
         </div><!-- /st-content -->
-
     </div><!-- /st-pusher -->
-
 </div><!-- /st-container -->
-
-
-
-
-
 <script src="js/jquery-1.10.2.min.js"></script>
-
-
-
 <!-- Swiper -->
-
 <script src="js/idangerous.swiper-2.2.min.js"></script>
-
-
-
 <script src="js/classie.js"></script>
-
 <script src="js/sidebarEffects.js"></script>
-
 <script src="js/swipers.js"></script>
-
 <script src="js/custom.js"></script>
-
-
 </body>
 </html>
