--- a/public/leftSidebar/AddFriend.html
+++ b/public/leftSidebar/AddFriend.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="img">
-        <img src="bindimg.png" style="height: 300px;width: 100%">
+        <img src="../bindimg.png" style="height: 300px;width: 100%">
     </div>
     <div class="label">
         <label>输入那刻魔镜的8位设备编号:</label>
