--- a/public/centerHome.html
+++ b/public/centerHome.html
@@ -18,9 +18,9 @@
     <nav class="st-menu st-effect-4">
         <ul>
             <li><h1>那刻 www.nokee.com</h1></li>
-            <li><a class="ico aboutus" href="AddFriend.html">添加</a></li>
+            <li><a class="ico aboutus" href="leftSidebar/AddFriend.html">添加</a></li>
             <li><a class="ico contact" href="contact.html">好友</a></li>
-            <li><a class="ico home selected" href="index.html">个人设置</a></li>
+            <li><a class="ico home selected" href="PersonalSetings.html">个人设置</a></li>
             <li><a class="ico portfolio" href="portfolio.html">使用说明</a></li>
             <li><a class="ico services" href="services.html">常见问题</a></li>
             <li><a class="ico gallery" href="gallery.html">意见反馈</a></li>
