--- a/public/leftSidebar/PersonalSetings.html
+++ b/public/leftSidebar/PersonalSetings.html
@@ -4,90 +4,8 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
-        .screen-reader-text {
-            position: absolute;
-            top: -9999px;
-            left: -9999px;
-        }
-        @font-face {
-            font-family: 'fontello';
-            src: url('http://css-tricks.com/examples/RoundButtons/fonts/fontello.eot');
-            src: url('http://css-tricks.com/examples/RoundButtons/fonts/fontello.eot?#iefix') format('embedded-opentype'),
-            url('http://css-tricks.com/examples/RoundButtons/fonts/fontello.woff') format('woff'),
-            url('http://css-tricks.com/examples/RoundButtons/fonts/fontello.ttf') format('truetype'),
-            url('http://css-tricks.com/examples/RoundButtons/fonts/fontello.svg#fontello') format('svg');
-            font-weight: normal; font-style: normal;
-        }
-        [class*="icon-"] {
-            font-family: 'fontello';
-            font-style: normal;
-            font-size: 3em;
-        }
-        /*.icon-home:after     { content: "\2302"; }*/
-        * {
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing:    border-box;
-            box-sizing:         border-box;
-            margin: 0;
-            padding: 0;
-        }
-        .nav {
-            list-style: none;
-            text-align: center;
-        }
-        .nav li {
-            position: relative;
-            display: inline-block;
-            margin-right: -4px;
-        }
-        .nav li:before {
-            content: "";
-            display: block;
-            border-top: 1px solid #ddd;
-            border-bottom: 1px solid #fff;
-            width: 100%;
-            height: 1px;
-            position: absolute;
-            top: 50%;
-            z-index: -1;
-        }
-        .nav a:link, .nav a:visited {
-            display: block;
-            text-decoration: none;
-            background-color: #f7f7f7;
-            color: #a7a7a7;
-            margin: 36px;
-            width: 144px;
-            height: 144px;
-            position: relative;
-            text-align: center;
-            line-height: 144px;
-            border-radius: 50%;
-            box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
-            border: solid 1px transparent;
-        }
-        .nav a:before {
-            content: "";
-            display: block;
-            background: #fff;
-            border-top: 2px solid #ddd;
-            position: absolute;
-            top: -18px;
-            left: -18px;
-            bottom: -18px;
-            right: -18px;
-            z-index: -1;
-            border-radius: 50%;
-            box-shadow: inset 0px 8px 48px #ddd;
-        }
-        .nav a:active {
-            box-shadow: none;
-            border: solid 1px #a7a7a7;
-        }
-        .nav a:hover {
-            text-decoration: none;
-            color: #555;
-            background: #f5f5f5;
+        *{
+            margin: 0px;
         }
         .navbar{
             background: cyan;
@@ -99,26 +17,66 @@
             text-align: center;
             padding-top: 10px;
         }
+        .imgtest{margin:10px 5px;
+            overflow:hidden;text-align:center;}
+        .list_ul figcaption p{
+            font-size:12px;
+            color:#aaa;
+        }
+        .imgtest figure div{
+            display:inline-block;
+            margin:5px auto;
+            width:100px;
+            height:100px;
+            border-radius:100px;
+            border:2px solid #fff;
+            overflow:hidden;
+            -webkit-box-shadow:0 0 3px #ccc;
+            box-shadow:0 0 3px #ccc;
+        }
+        .imgtest img{width:100%;
+            min-height:100%; }
+        .selectIcon{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
 <div class="navbar">
     <p>个人设置</p>
-    <div style="text-align: right;">
-        <input type="button" value="完成" style="">
-    </div>
 </div>
-<nav>
-    <ul class="nav">
-        <li>
-            <a href="#">
-                <span class="icon-home"></span>
-                <span class="screen-reader-text">Home</span>
-            </a>
-        </li>
-    </ul>
-</nav>
-<div style="text-align:center;clear:both">
+<div class="imgtest">
+    <figure>
+        <div>
+            <img id="previewImage"/>
+        </div>
+    </figure>
 </div>
+<div class="selectIcon">
+    <input type="file"  id="file" />
+</div>
+<script>
+    window.onload=function() {
+        document.getElementById('file').onchange = function (evt) {
+            // 如果浏览器不支持FileReader，则不处理
+            if (!window.FileReader) return;
+            var files = evt.target.files;
+            for (var i = 0, f; f = files[i]; i++) {
+                if (!f.type.match('image.*')) {
+                    continue;
+                }
+                var reader = new FileReader();
+                reader.onload = (function (theFile) {
+                    return function (e) {
+                        // img 元
+                        document.getElementById('previewImage').src = e.target.result;
+                    };
+                })(f);
+                reader.readAsDataURL(f);
+            }
+        }
+    }
+</script>
+
 </body>
 </html>
