--- a/public/leftSidebar/PersonalSetings.html
+++ b/public/leftSidebar/PersonalSetings.html
@@ -38,6 +38,7 @@
             min-height:100%; }
         .selectIcon{
             text-align: center;
+            padding-left: 100px;
         }
     </style>
 </head>
@@ -48,12 +49,18 @@
 <div class="imgtest">
     <figure>
         <div>
-            <img id="previewImage"/>
+            <img id="previewImage" />
         </div>
     </figure>
 </div>
 <div class="selectIcon">
     <input type="file"  id="file" />
+</div>
+<div style="text-align: center;padding-top: 40px">
+    <input type="text" style="height: 40px;width:80%;">
+</div>
+<div style="text-align: center;font-size: 30px;padding-top: 40px">
+    <input type="button" style="text-align: center;height: 100px;width: 100px" value="修改密码">
 </div>
 <script>
     window.onload=function() {
