--- a/public/centerHome.html
+++ b/public/centerHome.html
@@ -21,10 +21,10 @@
             <li><a class="ico aboutus" href="leftSidebar/AddFriend.html">添加</a></li>
             <li><a class="ico contact" href="leftSidebar/PersonalSetings.html">个人设置</a></li>
             <li><a class="ico home selected" href="contact.html">好友</a></li>
-            <li><a class="ico portfolio" href="portfolio.html">使用说明</a></li>
+            <li><a class="ico portfolio" href="http://www.nokee.com/weixin">使用说明</a></li>
             <li><a class="ico services" href="services.html">常见问题</a></li>
             <li><a class="ico gallery" href="gallery.html">意见反馈</a></li>
-            <li><a class="ico blog" href="blog.html">购买那刻魔镜</a></li>
+            <li><a class="ico blog" href="http://api.nokee.com/jdlink">购买那刻魔镜</a></li>
             <li><a class="ico typography" href="typography.html">关于产品</a></li>
         </ul>
     </nav>
