--- a/public/centerHome.html
+++ b/public/centerHome.html
@@ -62,7 +62,7 @@
                         <li><a href="demo.html"><b>分享那一刻</b></a></li>
                         <li><a href="PushInfo.html"><b>即时消息</b></a></li>
                         <li><a href="#"><b>呼叫魔镜</b></a></li>
-                        <li><a href="#"><b>定时消息 </b></a></li>
+                        <li><a href="RegularlyReminded.html"><b>定时消息 </b></a></li>
                         <li><a href="#"><b>语音记事本</b></a></li>
                         <li><a href="#"><b>智能生活 </b></a></li>
                         <li><a href="#"><b>信息订阅</b></a></li>
